# ShadowVM

./: CMakeLists.txt  README.md  container.c  hook_system.c  jail_layer.c  main.c  resource_hooks.c  resource_monitor.c  security_system.c  shadow_vm.c
include/: container.h  hook_system.h  jail_layer.h  resource_hooks.h  resource_monitor.h  resource_types.h  security_system.h  security_types.h  shadow_vm.h
